# csnet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: development.yml  docs.yml
cmake/: ExtractValidFlags.cmake
cmd/: CMakeLists.txt  ping.c
docs/: getting-started.md  installation_unix.md  main.md  types.md
docs/design/: source_address_determination.md
docs/examples/: paths_example.md
docs/functions/: scion_bind.md  scion_close.md  scion_connect.md  scion_fetch_paths.md  scion_getsockname.md  scion_list_append.md  scion_list_append_all.md  scion_list_create.md  scion_list_free.md  scion_list_free_values.md  scion_list_pop.md  scion_list_reverse.md  scion_parse_ia.md  scion_recv.md  scion_recvfrom.md  scion_send.md  scion_sendto.md  scion_set_path.md  scion_setsockopt.md  scion_socket.md
docs/structs/: scion_addr.md  scion_addr_storage.md  scion_border_router.md  scion_linked_list.md  scion_linked_list_node.md  scion_path.md  scion_path_interface.md  scion_path_metadata.md  scion_raw_path.md  scion_socket.md  scion_topology.md
esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  idf_component.yml  main.c
examples/: CMakeLists.txt  README.md  bootstrapper.c  choose_path.c  features.c  messages.c  paths.c  ping.c  policy.c  scmp_error.c  scmp_error_generator.c  server.c  simple_quic_client.c  topology.example.json  udp.c
include/scion/: error.h  jsmn.h  scion.h
include/scion/common/: as_entry.h  hop_field.h  info_field.h  isd_as.h  path_collection.h  path_segment.h  protocol.h
include/scion/control_plane/: fetch.h  graph.h  network.h  segment.h  topology.h
include/scion/data_plane/: packet.h  path.h  ping.h  scmp.h  socket.h  udp.h
include/scion/proto/control_plane/v1/: seg.pb-c.h  seg_extensions.pb-c.h
include/scion/proto/crypto/v1/: signed.pb-c.h
include/scion/util/: endian.h  http2_rpc.h
lib/: CMakeLists.txt  error.c
lib/common/: as_entry.c  as_entry.h  hop_field.c  hop_field.h  info_field.c  info_field.h  isd_as.c  isd_as.h  path_collection.c  path_collection.h  path_segment.c  path_segment.h
lib/control_plane/: bootstrapper.c  bootstrapper.h  fetch.c  fetch.h  graph.c  graph.h  network.c  network.h  path_collection.c  path_collection.h  path_metadata.c  path_metadata.h  policy.c  policy.h  segment.c  segment.h  topology.c  topology.h
lib/data_plane/: packet.c  packet.h  path.c  path.h  ping.c  ping.h  scmp.c  scmp.h  socket.c  socket.h  udp.c  udp.h  underlay.c  underlay.h
lib/google/protobuf/: timestamp.pb-c.c  timestamp.pb-c.h
lib/include/scion/: scion.h
lib/proto/control_plane/experimental/v1/: seg_detached_extensions.pb-c.c  seg_detached_extensions.pb-c.h
lib/proto/control_plane/v1/: seg.pb-c.c  seg.pb-c.h  seg_extensions.pb-c.c  seg_extensions.pb-c.h
lib/proto/crypto/v1/: signed.pb-c.c  signed.pb-c.h
lib/util/: http2_rpc.c  http2_rpc.h  linked_list.c  linked_list.h  list.c  list.h  map.c  map.h
proto/: generate_proto.sh
scripts/: run-quic-server.sh  run-testclient.sh  run-testnet.sh  run-testserver.sh  setup-network.sh
tests/: CMakeLists.txt  testing.c  testing.h
tests/common/: test_isd_as.c
tests/data_plane/: test_deserialization.c  test_path.c  test_serialization.c
tests/e2e/: CMakeLists.txt  choose_path.c  custom_policy.c  send_udp.c  server_with_multiple_clients.c  start_network_and_hosts.sh  stop_network_and_hosts.sh
tests/unit/: CMakeLists.txt  testing.h
tests/unit/common/: test_isd_as.c  test_isd_as.h
tests/unit/data_plane/: test_deserialization.h  test_path.c  test_path.h  test_serialization.h
tests/unit/util/: test_list.h  test_map.h
tests/util/: test_linked_list.c  test_list.c  test_map.c
